various fix about broken styles (#370)

--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,11 @@ table.translations tr.preview.has-original-copy,
     display: inline-block;
 }
 
+.gd-language-picker-container label {
+    vertical-align: 0;
+    margin: 0 2px;
+}
+
 .gd-language-picker-container.empty-locale {
     padding: 2px 5px;
     color: red;
@@ -438,6 +443,10 @@ li.consistency-header-index {
     vertical-align: -5px;
 }
 
+.gd_settings_panel table {
+    font-size: 14px;
+}
+
 #gd_settings_panel1 {
     display: -ms-flexbox;
     display: flex;
@@ -747,7 +756,7 @@ li.consistency-header-index {
 .gd-toggle__label {
     display: block;
     position: relative;
-    box-sizing: border-box;
+    box-sizing: border-box !important;
     outline: 0;
     width: 34px;
     height: 18px;
@@ -795,7 +804,7 @@ code {
     border-radius: 5px;
 }
 
-.gd-on-translations h2 {
+.gd-on-translations .gp-content h2 {
     font-size: 19px;
     font-weight: 500;
     line-height: 20px;
@@ -804,6 +813,7 @@ code {
 .gd-on-translations .gp-content h2 a.glossary-link {
     font-size: 16px;
     font-weight: 500;
+    margin-top: 0;
 }
 
 .gd-on-translations .gp-content h2 a.glossary-link:last-child,
@@ -825,7 +835,7 @@ code {
 
 @media screen and (min-width: 1920px) {
 
-    .gd-on-translations h2 {
+    .gd-on-translations .gp-content h2 {
         font-size: 20px;
         line-height: 21px;
     }
@@ -901,7 +911,7 @@ code {
         margin-left: 7px;
     }
 
-    .gd-on-translations h2 {
+    .gd-on-translations .gp-content h2 {
         font-size: 19px;
         line-height: 21px;
     }
@@ -912,7 +922,7 @@ code {
 }
 
 @media screen and (max-width: 1439.98px) {
-    .gd-on-translations h2 {
+    .gd-on-translations .gp-content h2 {
         font-size: 15px;
     }
 }
